--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.0-alpha10"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
 
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
